--- a/server/api/package.json
+++ b/server/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "pg": "^8.3.2"
+    "pg": "^8.3.2",
+    "mongodb": "^4.0.0"
   }
 }
